# testWebProd

./: CMakeLists.txt  main.cpp
gameOfLife/: gameOfLife.cpp  gameOfLife.h
src/: db.cpp  main.cpp
src/include/: crowTestHTTPServer.h  db.h  user.h
src/statics/: auth.html  auth.js  index.html  reg.html  reg.js  script.js  style.css
